Thu Dec  5 10:47:09 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (finalize_deferred): flush all deferred finalizers while other
	  finalizers can get ready to run newly by lazy sweep.
	  [ruby-core:58833] [Bug #9205]

Thu Dec  5 09:07:59 2013  Aman Gupta <ruby@tmm1.net>

	* gc.c (ruby_gc_set_params): Accept safe_level argument so GC tuning
	  settings can be applied before rb_safe_level() is available.
	* internal.h (rb_gc_set_params): ditto.
	* ruby.c (process_options): Apply GC tuning early during boot process
	  so boot-time allocations can benefit. This also benefits any code
	  loaded in via `ruby -r`.

Wed Dec  4 13:02:13 2013  Aman Gupta <ruby@tmm1.net>

	* vm_trace.c (rb_suppress_tracing): Fix initialization of stack
	  allocated rb_trace_arg_t structure. Without this patch, sometimes
	  INTERNAL_EVENT_GC would be skipped accidentally inside
	  rb_threadptr_exec_event_hooks_orig().

Wed Dec  4 12:57:24 2013  Aman Gupta <ruby@tmm1.net>

	* string.c (fstr_update_callback): Improve implementation in r43968
	  based on feedback from @nagachika. In the existing case, we can
	  return ST_STOP to prevent any hash modification. In the !existing
	  case, set both key and value to the fstr.

Wed Dec  4 12:47:54 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/delegate.rb (Delegator#method_missing): ignore the target if not
	  set, and delegate to global methods.  [ruby-core:58572] [Bug #9155]

	* lib/delegate.rb (Delegator#respond_to_missing): ditto.

	* lib/delegate.rb (SimpleDelegator#__getobj__): yield and return if
	  not delegated but a block is given, like as Hash#fetch.

	* lib/delegate.rb (DelegateClass#__getobj__): ditto.

Tue Dec  3 23:48:18 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: check malloc_size() available on BSD.

	* gc.c: use malloc_size() with malloc/malloc.h on BSD.

Tue Dec  3 23:06:20 2013  Narihiro Nakamura  <authornari@gmail.com>

	* object.c (rb_obj_clone): don't copy FL_WB_PROTECTED of a
	  original object.
